src/app/feature/pages/ddx-kyc/ddx-kyc-phone-verification/ddx-kyc-phone-verification.component.scss
@import '../../../../../styles.scss';

:host {
  form {
    grid-template-rows: auto auto max-content max-content auto auto max-content auto;
    grid-template-columns: auto auto;
    row-gap: 15px;

    grid-template-areas:
      'stepper-container stepper-container'
      'description description'
      'countryTelephoneCode countryTelephoneCode'
      'mobileNumber mobileNumber'
      'submitNumber submitNumber'
      'resendCode timer'
      'verification verification'
      'actions actions';

    .mat-error {
      margin-top: 13px;
    }

    .stepper-container {
      grid-area: stepper-container;
      margin-bottom: 15px;

      span {
        padding: 7px 0;
      }

      h3 {
        padding: 7px 0;
        color: $ddx-accent-lighter;
      }
    }

    #countryTelephoneCode {
      grid-area: countryTelephoneCode;
    }

    #mobileNumber {
      grid-area: mobileNumber;

      text-align: left; // HARDCODED!
    }

    ::ng-deep .mat-form-field-appearance-outline .mat-form-field-suffix,
    .mat-form-field-appearance-outline .mat-form-field-suffix {
      direction: ltr;
    }

    #submitNumberButtonContainer {
      grid-area: submitNumber;

      margin: 5px 0;

      button {
        width: 100%;
      }
    }

    #resendCode {
      grid-area: resendCode;
      align-items: center;
    }

    #timer {
      grid-area: timer;
      justify-content: flex-end;
      align-items: center;
      font-size: 14px;
    }

    #code {
      grid-area: verification;

      .mat-form-field {
        width: 100%;
      }
    }

    .hidden {
      visibility: hidden;
      opacity: 0;
    }
  }
}

@media screen and (min-width: $break-mobile) {
  :host {
    .stepper-container {
      display: none;
    }

    form {
      grid-template-rows: auto max-content auto auto max-content auto;
      grid-template-columns: 1fr 1fr 1fr;
      grid-template-areas:
        'description description description'
        'countryTelephoneCode mobileNumber mobileNumber'
        'submitNumber submitNumber submitNumber'
        'resendCode . timer'
        'verification verification verification'
        'actions actions actions';
    }
  }
}

@media screen and (min-width: $break-narrow-tablet) {
  :host {
    form {
      grid-template-rows: auto max-content auto auto max-content auto;
      grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
      grid-template-areas:
        'description description description description description'
        '. countryTelephoneCode mobileNumber mobileNumber .'
        '. submitNumber submitNumber submitNumber .'
        '. resendCode . timer .'
        '. verification verification verification .'
        '. . actions actions actions';
    }
  }
}

